Fix cmd-tilde for various keyboard layouts by trusting event handled status for command key events. b=417466 r=masayuki sr=roc